plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/runConfigurations/jvmRun/src/jvmMain/kotlin/JvmMain.kt
package jvmMain

fun <!LINE_MARKER!>main<!>() {
    println("run: JvmMain")
}
